fix: fix z-index of elements

--- a/src/app/games/audiochallenge/sass/_startPage.scss
+++ b/src/app/games/audiochallenge/sass/_startPage.scss
@@ -89,8 +89,10 @@
 }
 
 .audiochallenge-subtitle {
+  padding: 0 10px;
   color: $white_color;
   font-size: 2.5rem;
+  text-align: center;
 }
 
 .audiochallenge-list {
