--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -1,3 +1,8 @@
+.menu {
+  position: relative;
+  z-index: 2;
+}
+
 .menu__icon {
   position: relative;
   width: 37px;
